# smec

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  sme.pc.in
sme/: Makefile.am  address.h  channel.c  channel.h  channel_link.c  channel_link.h  error.c  error.h  fd_channel.c  fd_channel.h  incl.h  iov.c  iov.h  link.c  link.h  msg.c  msg.h  sme.h
tests/: Makefile.am  logcc.sh.in  test_channel.c  test_msg.c
